cmake_minimum_required(VERSION 2.8)
#set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_BUILD_TYPE Release)
project(DepthDenoise)

#SET( CMAKE_CXX_COMPILER "g++") 

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)
add_subdirectory(src)